Basic Spring Security implemented!

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <button type="submit">Login</button>
-    <button type="button" th:action="@{/register}">Register</button>
+    <a type="button" href="/register">Register</a>
 </form>
 </body>
 </html>
