Header file made as a fragment.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
+<head th:replace="fragments/head::header"></head>
 <body>
 <form th:action="@{/login}" th:object="${loggedInUserDTO}" th:method="POST">
     <div>
