--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:replace="fragments/head::header"></head>
+<head th:replace="~{fragments/head::header}"></head>
 <body>
 <a href="/logout">Logout</a>
 <p>Hello, <span>User</span></p>
