--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
 <head th:replace="~{fragments/head::header}"></head>
 <body>
-<a href="/logout">Logout</a>
-<p>Hello, <span>User</span></p>
+<nav class="navbar navbar-light bg-light" th:fragment="search">
+    <form class="form-inline">
+        <label for="searchUsername"></label>
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="searchUsername" name="searchUsername">
+        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+    </form>
+    <p th:if="${loggedInUser != null}" th:text="'Welcome, ' + ${loggedInUser.username}"></p>
+    <p th:if="${loggedInUser == null}">Welcome, Guest</p>
+    <a href="/logout">Logout</a>
+</nav>
 </body>
 </html>
