Login greeting fixed with sending HttpServletRequest param to the index form. In this request is saved the principal with his/her username after successful login. Search bar's repo and service methods implemented for searching users by a keyword ignoring uppercase and lowercase mismatches.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="searchUsername" name="searchUsername">
         <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
     </form>
-    <p th:if="${loggedInUser != null}" th:text="'Welcome, ' + ${loggedInUser.username}"></p>
-    <p th:if="${loggedInUser == null}">Welcome, Guest</p>
+    <p th:if="${httpServletRequest.userPrincipal != null}"
+       th:text="'Welcome, ' + ${httpServletRequest.userPrincipal.name}"></p>
     <a href="/logout">Logout</a>
 </nav>
 </body>
