Comments in chat design css file removed.

--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -2,10 +2,10 @@
     visibility: hidden;
     margin-left: 20%;
     display: flex;
-    flex-direction: column; /* Stack items vertically */
-    align-items: stretch; /* Ensure that children take up the full width of the container */
-    justify-content: flex-start; /* Start the content at the top */
-    position: relative; /* Allow absolute positioning of the button */
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: flex-start;
+    position: relative;
     width: 80%;
     height: 650px;
     padding: 10px;
@@ -15,57 +15,57 @@
 }
 
 #chat-with-username {
-    text-align: center; /* Center the text horizontally */
-    font-size: 1.5rem; /* Increase the font size for the username */
+    text-align: center;
+    font-size: 1.5rem;
     margin-left: 50%;
-    padding: 10px 0; /* Add some padding for spacing */
+    padding: 10px 0;
 }
 
 .close-button {
-    position: absolute; /* Position the button at the top-right corner */
-    top: 10px; /* Adjust the top distance */
-    right: 10px; /* Adjust the right distance */
-    padding: 5px 10px; /* Optional: add padding to the button */
-    cursor: pointer; /* Change cursor to pointer for better UX */
-    background-color: transparent; /* Make the button background transparent */
-    border: none; /* Remove the default button border */
-    font-size: 1.5rem; /* Increase the font size of the button */
-    color: #dc3545; /* Red color for the button */
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: #dc3545;
 }
 
 .chat-container div {
-    position: relative; /* This is to allow absolute positioning inside the container */
+    position: relative;
     resize: both;
 }
 
 hr {
-    width: 100%; /* Make the horizontal line span the full width */
-    margin: 15px 0; /* Add some space before and after the line */
+    width: 100%;
+    margin: 15px 0;
     border: none;
     border-top: 1px solid cadetblue;
 }
 
 .messages-space {
-    margin-top: 20px; /* Add space between the message input and the previous elements */
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
 }
 
 .message-area {
-    width: 80%; /* Make the input field take most of the width */
+    width: 80%;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
 }
 
 button.btn:hover {
-    background-color: #5a9f9f; /* Change button color on hover */
+    background-color: #5a9f9f;
 }
 
 .old-messages {
     height: 80%;
     width: 100%;
-    flex-grow: 1; /* Make sure it fills the remaining space */
+    flex-grow: 1;
     overflow-x: hidden;
     overflow-y: auto;
 }
