--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
         <input class="form-control mr-sm-2" type="text" placeholder="Search users..." aria-label="Search" id="searchInput"  onkeyup="fetchSuggestions();">
         <button class="btn btn-outline-info my-2 my-sm-0" onclick="fetchSuggestions();">Search</button>
     </div>
-    <p th:if="${httpServletRequest.userPrincipal != null}"
+    <p id="greeting-p" th:if="${httpServletRequest.userPrincipal != null}"
        th:text="'Welcome, ' + ${httpServletRequest.userPrincipal.name}"></p>
     <a href="/logout">Logout</a>
 </nav>
@@ -16,18 +16,24 @@
 </div>
 <div id="personalChat" class="chat-container">
     <div>
-        <span id="chat-with-username" class="lead text-center">Chat with Username</span>
+        <span id="chat-with-username" class="lead text-center"></span>
         <button onclick="closeChat();" class="close-button">X</button>
     </div>
     <hr/>
-    <div class="old-messages"></div>
+    <div class="old-messages">
+        <p id="old-messages-p"></p>
+    </div>
     <div class="messages-space">
-        <input class="form-control mr-sm-2 message-area" type="text" placeholder="Enter message..." aria-label="message">
-        <button class="btn btn-outline-info my-2 my-sm-0">Send</button>
+        <input id="message" class="form-control mr-sm-2 message-area" type="text" placeholder="Enter message..." aria-label="message">
+        <button class="btn btn-outline-info my-2 my-sm-0" onclick="sendMessage()">Send</button>
     </div>
 </div>
 </body>
 <script>
+    let usersMap = {};
+    let toUser = null;
+    let fromUser = null;
+
     function fetchSuggestions() {
         let keyword = document.getElementById("searchInput").value;
         if (keyword.length < 2) {
@@ -42,6 +48,7 @@
             data: { keyword: keyword },
             success: function(response) {
                 let suggestions = response.map(user => {
+                    usersMap[user.username] = user.id;
                     suggestionCnt++; // Increment counter correctly
                     return `<li id="suggestion${suggestionCnt}" class="suggestion"
                             onclick="selectUser('${user.username}');"
@@ -60,6 +67,7 @@
         document.getElementById("suggestions").innerHTML = "";
         document.getElementById("personalChat").style.visibility = "visible";
         document.getElementById("chat-with-username").innerHTML = name;
+        toUser = name;
     }
 
     function closeChat() {
@@ -73,5 +81,67 @@
     function resetBackground(no) {
         document.getElementById(`suggestion${no}`).style.backgroundColor = "";
     }
+
+
+
+    <!-- CHAT functions -->
+    let stompClient = null;
+
+    function connect() {
+        let socket = new SockJS('/chat');
+        stompClient = Stomp.over(socket);
+        stompClient.connect({}, function (frame) {
+            console.log('Connected: ' + frame);
+            stompClient.subscribe('/topic/public', function (message) {
+                showMessage(JSON.parse(message.body));
+            });
+        });
+    }
+
+    function sendMessage() {
+        fromUser = document.getElementById("greeting-p").innerHTML.substring(9);
+        let messageContent = document.getElementById("message").value;
+        if (messageContent) {
+            let now = new Date().getTime();
+            let message = {
+                fromUser: fromUser,
+                toUser: toUser,
+                sentDate: now,
+                content: messageContent
+            };
+            stompClient.send("/api/chat.sendMessage", {}, JSON.stringify(message));
+            showMessage(message);
+            document.getElementById("message").value = '';
+
+            <!-- Send the message to the database -->
+            let messageDTO = {
+                fromUser: usersMap[fromUser],
+                toUser: usersMap[toUser],
+                sentDate: now,
+                content: messageContent
+            };
+            console.log(messageDTO);
+            $.ajax({
+                url: "/api/send-message",
+                type: "POST",
+                contentType: "application/json",
+                data: JSON.stringify(messageDTO),
+                success: function(response) {
+                    console.log("Message saved:", response);
+                },
+                error: function(xhr, status, error) {
+                    console.error("Error saving message:", xhr.responseText);
+                }
+            });
+
+        }
+    }
+
+    function showMessage(message) {
+        let messageElement = document.getElementById("old-messages-p");
+        messageElement.innerHTML += (message.fromUser + ": " + message.content + '\n');
+    }
+
+    connect();
 </script>
 </html>
