Sending messages js code refactored to use web sockets.

--- a/src/main/resources/static/css/search-bar.css
+++ b/src/main/resources/static/css/search-bar.css
@@ -25,3 +25,19 @@
     background-color: cadetblue;
     color: white;
 }
+
+.visible {
+    visibility: visible;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+.cadetBlueBackground {
+    background-color: cadetblue;
+}
+
+.beigeBackground {
+    background-color: beige;
+}
